[gd_scene load_steps=34 format=2]

[ext_resource path="res://Assets/ghoul/walk_01.png" type="Texture" id=1]
[ext_resource path="res://Assets/ghoul/walk_02.png" type="Texture" id=2]
[ext_resource path="res://Assets/ghoul/walk_03.png" type="Texture" id=3]
[ext_resource path="res://Assets/ghoul/chase_01.png" type="Texture" id=4]
[ext_resource path="res://Assets/ghoul/walk_05.png" type="Texture" id=5]
[ext_resource path="res://Assets/ghoul/chase_07.png" type="Texture" id=6]
[ext_resource path="res://Assets/ghoul/chase_05.png" type="Texture" id=7]
[ext_resource path="res://Assets/ghoul/chase_03.png" type="Texture" id=8]
[ext_resource path="res://Assets/ghoul/chase_04.png" type="Texture" id=9]
[ext_resource path="res://Assets/ghoul/chase_06.png" type="Texture" id=10]
[ext_resource path="res://Assets/ghoul/walk_08.png" type="Texture" id=11]
[ext_resource path="res://Assets/ghoul/walk_06.png" type="Texture" id=12]
[ext_resource path="res://Assets/ghoul/chase_08.png" type="Texture" id=13]
[ext_resource path="res://Assets/ghoul/walk_04.png" type="Texture" id=14]
[ext_resource path="res://Assets/ghoul/chase_02.png" type="Texture" id=15]
[ext_resource path="res://Assets/ghoul/walk_07.png" type="Texture" id=16]
[ext_resource path="res://Enemy.gd" type="Script" id=17]
[ext_resource path="res://Assets/fx/enemy-death8.png" type="Texture" id=18]
[ext_resource path="res://Assets/fx/enemy-death6.png" type="Texture" id=19]
[ext_resource path="res://Assets/fx/enemy-death2.png" type="Texture" id=20]
[ext_resource path="res://Assets/fx/enemy-death9.png" type="Texture" id=21]
[ext_resource path="res://Assets/fx/enemy-death4.png" type="Texture" id=22]
[ext_resource path="res://Assets/fx/enemy-death7.png" type="Texture" id=23]
[ext_resource path="res://Assets/fx/enemy-death3.png" type="Texture" id=24]
[ext_resource path="res://Assets/fx/enemy-death5.png" type="Texture" id=25]
[ext_resource path="res://Hurtbox.tscn" type="PackedScene" id=26]
[ext_resource path="res://MeleeAttack.tscn" type="PackedScene" id=27]
[ext_resource path="res://whiten_material.tres" type="Material" id=28]
[ext_resource path="res://Blinker.tscn" type="PackedScene" id=29]

[sub_resource type="SpriteFrames" id=1]
animations = [ {
"frames": [ ExtResource( 1 ), ExtResource( 2 ), ExtResource( 3 ), ExtResource( 14 ), ExtResource( 5 ), ExtResource( 12 ), ExtResource( 16 ), ExtResource( 11 ) ],
"loop": true,
"name": "walk",
"speed": 5.0
}, {
"frames": [ ExtResource( 2 ), ExtResource( 2 ), ExtResource( 2 ), ExtResource( 2 ), ExtResource( 2 ), ExtResource( 13 ) ],
"loop": false,
"name": "hurt",
"speed": 6.0
}, {
"frames": [ ExtResource( 20 ), ExtResource( 24 ), ExtResource( 22 ), ExtResource( 25 ), ExtResource( 19 ), ExtResource( 23 ), ExtResource( 18 ), ExtResource( 21 ) ],
"loop": false,
"name": "dead",
"speed": 10.0
}, {
"frames": [ ExtResource( 4 ), ExtResource( 15 ), ExtResource( 8 ), ExtResource( 9 ), ExtResource( 7 ), ExtResource( 10 ), ExtResource( 6 ), ExtResource( 13 ) ],
"loop": true,
"name": "chase",
"speed": 5.0
} ]

[sub_resource type="CapsuleShape2D" id=2]
radius = 6.31196
height = 7.41263

[sub_resource type="RectangleShape2D" id=3]
extents = Vector2( 7.258, 13.9034 )

[sub_resource type="RectangleShape2D" id=4]
extents = Vector2( 5.63842, 16.3115 )

[node name="Enemy" type="KinematicBody2D"]
position = Vector2( 1.47385, 0 )
z_index = 1
collision_layer = 2
collision_mask = 8
script = ExtResource( 17 )

[node name="AnimatedSprite" type="AnimatedSprite" parent="."]
material = ExtResource( 28 )
position = Vector2( 0, -30 )
frames = SubResource( 1 )
animation = "walk"
frame = 3
playing = true

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( -1.405, -10.3 )
shape = SubResource( 2 )

[node name="FloorCast" type="RayCast2D" parent="."]
position = Vector2( -9.29783, -21.0012 )
enabled = true
cast_to = Vector2( 0, 23 )
collision_mask = 8

[node name="WallCast" type="RayCast2D" parent="."]
position = Vector2( -8.487, -7.8 )
enabled = true
cast_to = Vector2( -10, 0 )
collision_mask = 8

[node name="PlayerDetectCast" type="RayCast2D" parent="."]
position = Vector2( -8.487, -15 )
enabled = true
cast_to = Vector2( -40, 0 )

[node name="Hurtbox" parent="." instance=ExtResource( 26 )]
collision_mask = 16
whiten_material = ExtResource( 28 )

[node name="CollisionShape2D" parent="Hurtbox" index="0"]
position = Vector2( -0.793701, -13.8898 )
shape = SubResource( 3 )

[node name="MeleeAttack" parent="." groups=[
"EnemyAttack",
] instance=ExtResource( 27 )]
collision_layer = 32
knockback = 100

[node name="CollisionShape2D" parent="MeleeAttack" index="0"]
position = Vector2( -13.8373, -16.7905 )
shape = SubResource( 4 )

[node name="JumpTimer" type="Timer" parent="."]
wait_time = 6.0
autostart = true

[node name="SFX" type="AudioStreamPlayer2D" parent="."]
volume_db = -10.0
pitch_scale = 0.9
max_distance = 5000.0

[node name="Blinker" parent="." instance=ExtResource( 29 )]
[connection signal="animation_finished" from="AnimatedSprite" to="." method="_on_AnimatedSprite_animation_finished"]
[connection signal="area_entered" from="Hurtbox" to="." method="_on_Hurtbox_area_entered"]
[connection signal="timeout" from="JumpTimer" to="." method="_on_JumpTimer_timeout"]

[editable path="Hurtbox"]

[editable path="MeleeAttack"]
